# serious-homepage

./: Caddyfile
admin/: package-lock.json  package.json
admin/src/: App.tsx  App.vue  LoginApi.ts  endpoint.ts  index.tsx  login.tsx  main.ts  shims-vue.d.ts
admin/src/blog/: blog.tsx
admin/src/endpoints/: gallery.ts
admin/src/gallery/: Gallery.tsx  GalleryApi.ts  gallery.tsx
admin/src/gallery/models/: Album.ts
admin/src/recipe/: EditRecipe.tsx  Recipe.tsx
admin/src/recipe/models/: createRecipe.ts  recipe.ts
admin/src/router/: index.ts
admin/src/views/: Home.vue
admin/src/views/gallery/: Gallery.vue
admin/src/views/gallery/components/: GalleryCard.vue
admin/src/views/recipe/: Recipe.vue  RecipeBase.vue  RecipeEdit.vue  RecipeList.vue  recipe-api.ts  recipeApi.ts
admin/src/views/recipe/components/: RecipeCard.vue
front-end/: .gitignore  Cargo.toml  README.md  bootstrap.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.js  webpack.config.js
front-end/src/: app.rs  fetch.rs  index.html  lib.rs  main.rs  markdown.rs  style_template.css  utils.rs
front-end/src/components/: mod.rs  view_recipe.rs
front-end/src/views/: blog.rs  gallery.rs  home.rs  mod.rs  recipies.rs  todo.rs
front-end/static/: index.html
server/: .env  Cargo.toml  bench.js  database.env  docker-compose.yml  seed
server/.cargo/: config.toml
server/hurl/: create_todo.hurl  get_todos.hurl
server/migrations/: 2020-03-07_23-38-59_AddAlbum.sql  2020-03-07_23-39-11_AddImage.sql  2020-03-07_23-39-24_AddAlbum2Image.sql  2020-03-07_23-58-44_AddRecipe.sql  2020-03-08_00-02-35_AddTodo.sql  2021-10-10_12-11-33_AddAccountTable.sql  schema.sql
server/src/: auth.rs  file.rs  gallery.rs  login.rs  main.rs  recipies.rs  session.rs  todos.rs
server/src/controllers/: gallery.rs  login.rs  mod.rs  recipies.rs  todos.rs
server/src/models/: album.rs  image.rs  list_options.rs  mod.rs  recipe.rs  todo.rs
server/src/repo/: mod.rs  todo_repo.rs
