[package]
name = "serious-homepage"
version = "0.1.0"
authors = ["Jesper Axelsson <jesperaxe@gmail.com!>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4.17"

serde = "1.0.116"
serde_json = "1.0.57"
serde_derive = "1.0.116"
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"
# web_logger = "0.2.0"
# pulldown-cmark = "0.7.1"
# pulldown-cmark = {version = "0.7", no-

yew = { version = "0.19.3" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.45"
features = [
  'Node',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'ReadableStream',
  'Window',
  'Element' 
]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"
