[package]
name = "server"
version = "0.1.0"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
warp = "0.2.5"


pretty_env_logger = "0.4.0"
serde_derive = "1.0.116"
serde = "1.0.116"
serde_json = "1.0.57"
futures= "0.3.5"
log = "0.4.11"

dotenv = "0.15.0"

sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }
