[package]
name = "server"
version = "0.1.0"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"


pretty_env_logger = "0.4.0"
serde_derive = "1.0.116"
serde = "1.0.116"
serde_json = "1.0.58"
futures= "0.3.5"
log = "0.4.11"

bytes = "1.0"
uuid = { version = "1.1", features = ["v4"] }

dotenv = "0.15.0"

sqlx = { version = "0.5", default-features = false, features = [ "runtime-tokio-rustls", "macros", "postgres" ] }
rand = "0.8"
rust-argon2 = "1"
thiserror = "1.0"


jsonwebtoken = "8.1"
chrono = "0.4"
# rusoto_core = {version = "0.45.0", default_features = false, features=["rustls"]}
# rusoto_s3 =  {version =  "0.45.0", default_features = false, features=["rustls"]}

# rusoto_core = "0.45.0"
# rusoto_s3 = "0.45.0"

# rust-s3 = "0.26"

[build]
# Speed up linking, does need lld though. Might disable later?
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
