[package]
name = "server"
version = "0.1.0"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version="0.6", features = ["headers","multipart"] }
tower-http = { version = "0.3.0", features = ["fs", "trace"] }
futures = "0.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde_derive = "1.0.116"
serde = "1.0.116"
serde_json = "1.0.58"

uuid = { version = "1.1", features = ["v4", "serde"] }

dotenv = "0.15.0"

sqlx = { version = "0.6", default-features = false, features = [ "runtime-tokio-rustls", "macros", "postgres" ] }

# thiserror = "1.0"

async-session = "3.0.0"

argon2 = "0.4"

# chrono = "0.4"

# rusoto_core = {version = "0.45.0", default_features = false, features=["rustls"]}
# rusoto_s3 =  {version =  "0.45.0", default_features = false, features=["rustls"]}

# rusoto_core = "0.45.0"
# rusoto_s3 = "0.45.0"

# rust-s3 = "0.26"
